fix "create post" button covering unexpected areas

--- a/resources/style/mod.css
+++ b/resources/style/mod.css
@@ -66,8 +66,11 @@ a:hover {
 }
 
 #createpost {
-	max-width: 95%;
-	padding-bottom: 5rem;
+	max-width: 3rem;
+	max-height: 3rem;
+	padding-bottom: 6rem;
+	margin-left: auto;
+	margin-right: 2rem;
 }
 
 body {
